# sonnen_solar_sharer

./: .gitignore  Cargo.toml  LICENSE  readme.md
resources/: config.toml
src/: config.rs  main.rs  schedule.rs
